updated file line 64

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<footer>
 		<nav class="navigation">
 			  <ol>
-				  <li class="page"><a href="itis3135/">ITIS3135 Course</a></li>
+				  <li class="page"><a href="itis3135/">ITIS3135 Course TEST</a></li>
 				  <li class="page"><a href="/apalme31/itis3135/tables.html">Tables</a></li>
 				  <li class="page"><a href="itis3135/forms.html">Forms</a></li>
 			  </ol>
