--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alexander Palmer's Angry Panda</title>
     <link href = "styles/default.css" rel = "stlyessheet">
 
@@ -8,26 +11,81 @@
 <body>
     <header>
         <h1>Alexander's Angry Panda </h1>
+        <nav class="navigation">
+            <ol>
+                <li class="page"><a href="index.html">Home</a></li>
+                <li class="page"><a href="/apalme31/itis3135/tables.html">Tables</a></li>
+                <li class="page"><a href="forms.html">Forms</a></li>
+            </ol>
+        </nav> 
     </header>
     <main>
-        <h2>Welcome to my page!</h2>
-        <p>picture will go here</p>
-        <p>caption goes here</p>
-        <p>bullets go here</p>
-        <p>other things go here</p>
-        <p>Glad you could make it. Come back early and often for updates</p>
+        <article class="topdiv">
+            <h2>Alexander P</h2> 
+        </article>
+        <article class="topdiv">
+            <h2>Mascot: Angry Panda's</h2>
+        </article>
+        <article class="topdiv">
+            <h3></h3>
+        </article>
+        <figure>
+    <img class="magic" src="" alt="online image" width="60" height="500">
     </main>
+    <ul>
+        <li class="bullet"><strong>Personal Background</strong>: I just moved back to NC from Oregon. Do not move to Oregon. </li>
+            <li><strong>Professional Background</strong>: I worked 7 years in the tower for a major airline.  
+                Military for a couple of years then worked in the service industry ever since.</li>
+            <li><strong>Academic Background</strong>: I am a Computer Science major</li>
+            <li><strong>Background in this Subject</strong>: Personal projects have included computer coding</li>
+            <li><strong>Primary Computer Platform</strong>: Windows</li>
+             <li><strong>Courses I'm Taking & Why</strong>: 
+                <ul class="square">
+                    <li><strong>ITCS 3050 - Research topics in CS</strong>: I like research and I am exploring the option of Masters in CS
+                    </li>
+                    <li><strong>ITIS 3135 - Web App Design</strong>: I am very interested in software engineering. Mainly design
+                    </li>
+                    <li><strong>MATH 2164 Matrices & Linear</strong>: Next semester I plan on taking a masters course in applied mathematics or CS and in the summer I am working at an internship that uses matrices
+                    </li>
+                    <li><strong>ENG 2116- Technical Writing</strong>: Computer science related and helpful
+                    </li>
+                    <strong>ITSC 3155 Software Engineering</strong>: I am very interested in design
+                    </li>
+                    <li><strong>UCOL 3410 Internship</strong>: I am currently interning at a tech company
+                    </li>    
+                   </ul>
+            </li>
+             <li><strong>Funny/Interesting Item about Yourself</strong>: I was flying on a plane and sat next to this older guy 
+                who was in his eighties. After I told him I was 21, he said that I can stop and restart my life 4 times over. 
+                I can stop my life and career at 21 and restart my career and life again and relive it for 20 more years. 
+                Then at 42, I can stop again and restart and redo all the mistakes for 20 more years and stop again and be a 
+                totally different person for 
+                20 more years. By the time I am 82, I would have lived 4 different lives. So never give up!</li>
+             <li><strong>I'd also like to Share</strong>: I have traveled to over 20 countries</li>
+    </ul>
     <footer>
-        Site designed by Alexander copy,2023
+        <br>
+		<nav>
+		    <a href="https://webpages.charlotte.edu/apalme31" target="_blank">Charlotte.edu</a> &#9553;
+		    <a href="https://github.com/Tower-Babel" target="_blank">Github</a> &#9553;
+		    <a href="https://github.com/Tower-Babel/towerbabel.github.io" target="_blank">Github.io</a> &#9553;
+		    <a href="https://github.com/Tower-Babel/towerbabel.github.io" target="_blank">ITIS 3135 Github Pages</a> &#9553;
+		    <a href="https://www.codecademy.com/profiles/AlexanderAug" target="_blank">Codecademy</a> &#9553;
+		    <a href="https://www.freecodecamp.org/AlexanderAug" target="_blank">FreeCodeCamp</a> &#9553;
+		    <a href="http://www.linkedin.com/in/alexanderpalmero" target="_blank">LinkedIn</a> &#9553;
+		</nav>
+        <p>Site designed by Alexander copy,2023</p>
+        <a href="https://validator.w3.org/check?uri=referer">
+            <img style="border:0;width:88px;height:31px"
+                src="https://upload.wikimedia.org/wikipedia/commons/b/bb/W3C_HTML5_certified.png"
+                alt="Valid HTML!" />
+        </a>
+        <a href="https://jigsaw.w3.org/css-validator/check/referer">
+            <img style="border:0;width:88px;height:31px"
+                src="https://jigsaw.w3.org/css-validator/images/vcss"
+                alt="Valid CSS!" />
+        </a>
     </footer>
 </body>
-<footer>
-    <nav class="navigation">
-          <ol>
-              <li class="page"><a href="index.html">Home</a></li>
-              <li class="page"><a href="/apalme31/itis3135/tables.html">Tables</a></li>
-              <li class="page"><a href="forms.html">Forms</a></li>
-          </ol>
-      </nav> 
-    </footer>     
+   
 </html>
